feature(login): add user login
- add unit tests for user login
- add controller logic for user login
- document feature on swagger
- update unit tests
- fix merge confilct with sign up
- fix merge conflicts with test files
- add  checks for validation and verified status on login
- reduce number of queries in signup endpoint
- refactor code to eliminate nested if conditionals

[delivers #167164979]
