# src/controllers/userController.js
@@ -1,10 +1,13 @@
+import { Op } from 'sequelize';
 import models from '../database/models';
-import helpers from '../helpers/index';
+import helpers from '../helpers';
 
-const { authHelper, responseHelper } = helpers;
+const { authHelper, successResponse, errorResponse } = helpers;
+
+const { User } = models;
 
 /**
-   *
+   * user signup controller
    * @param {Object} req - server request
    * @param {Object} res - server response
    * @returns {Object} - custom response
@@ -14,27 +17,22 @@ const signUp = async (req, res) => {
     firstName, lastName, username, email, password
   } = req.body;
 
-  const foundEmail = await models.User.findOne({ where: { email } });
-  const foundUsername = await models.User.findOne({ where: { username } });
+  const rows = await User.findAll({
+    where: {
+      [Op.or]: [{ email }, { username }]
+    }
+  });
 
-  if (foundEmail) {
-    const data = {
-      errors: [{
-        field: 'email',
-        message: 'user with email already exists'
-      }]
-    };
-    return responseHelper.successResponse(res, 409, data);
+  const foundUser = rows[0];
+
+
+  if (foundUser && foundUser.email.toString() === email) {
+    return errorResponse(res, 409, 'user with email already exists');
   }
 
-  if (foundUsername) {
-    const data = {
-      errors: [{
-        field: 'username',
-        message: 'username already taken'
-      }]
-    };
-    return responseHelper.successResponse(res, 409, data);
+  if (foundUser && foundUser.username.toString() === username) {
+    const errors = 'username already taken';
+    return errorResponse(res, 409, errors);
   }
 
   const user = {
@@ -45,10 +43,9 @@ const signUp = async (req, res) => {
     password: authHelper.hashedPassword(password)
   };
 
-  const createdUser = await models.User.create(user);
+  const createdUser = await User.create(user);
 
-  return res.status(201).json({
-    status: res.statusCode,
+  const response = {
     user: {
       email: createdUser.email,
       token: authHelper.generateToken({ id: createdUser.id }),
@@ -56,8 +53,46 @@ const signUp = async (req, res) => {
       bio: createdUser.bio,
       image: createdUser.avatar
     }
-  });
+  };
+
+  return successResponse(res, 200, response);
+};
+
+/**
+   * user login controller
+   * @param {Object} req - server request
+   * @param {Object} res - server response
+   * @return {Object} - custom response
+   */
+const login = async (req, res) => {
+  const {
+    email, password
+  } = req.body;
+
+  const authErrorMessage = 'email or password is incorrect';
+
+  const foundUser = await User.findOne({ where: { email } });
+
+  if (!foundUser) return errorResponse(res, 401, authErrorMessage);
+
+  const correctPassword = authHelper.comparePassword(password, foundUser.password);
+
+  if (!correctPassword) return errorResponse(res, 401, authErrorMessage);
+
+  if (!foundUser.isVerified) {
+    return errorResponse(res, 401, 'please verify your email');
+  }
+
+  const data = {
+    user: {
+      email: foundUser.email,
+      token: authHelper.generateToken({ id: foundUser.id }),
+      username: foundUser.username,
+      bio: foundUser.bio
+    }
+  };
+  return successResponse(res, 200, data);
 };
 
 
-export default signUp;
+export { signUp, login };
