# src/database/models/index.js
@@ -11,13 +11,7 @@ const env = process.env.NODE_ENV || 'development';
 const config = dbConfig[env];
 const db = {};
 
-
-let sequelize;
-if (config.use_env_variable) {
-  sequelize = new Sequelize(process.env[config.use_env_variable], config);
-} else {
-  sequelize = new Sequelize(config.database, config.username, config.password, config);
-}
+const sequelize = new Sequelize(process.env[config.use_env_variable], config);
 
 readdirSync(__dirname)
   .filter(file => (file.indexOf('.') !== 0) && (file !== basename) && (file.slice(-3) === '.js'))
